交接文档: §6.27 44-01 经验(大纲行号全对,补充机制 7 条: union 编码/判定树+解析触发/Uninitialized 生命周期/invoke 四层/VerifyError 路径/实证);进度 72/152;下一步 44-02